syntax = "proto3";

option go_package = "genproto/auth";

package auth;

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
  string user_type = 5;
}

message Void {}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
}

message ResetPasswordRequest {
  string email = 1;
}

message ResetPasswordResponse {
  string message = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
}

message Id {
  string Id = 1;
}

message LogoutResponse {
  string message = 1;
}

service AuthService {
  rpc Register (RegisterRequest) returns (Void);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout (Id) returns (LogoutResponse);
}
