syntax = "proto3";

option go_package = "genproto/user";

package user;

message ProfileResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string user_type = 5;
  string created_at = 6;
  string updated_at = 7;
}

message Void {}

message UpdateProfileRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string bio = 5;
  string user_type = 6;
  string updated_at = 7;
}

message UpdateUserTypeRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string bio = 5;
  string user_type = 6;
  string updated_at = 7;
}

message User {
  string id = 1;
  string username = 2;
  string full_name = 3;
  string user_type = 4;
}

message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message Id {
  string Id = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}
message UserActivityRequest {
  string user_id = 1;
  string start_date = 2;
  string end_date = 3;
}

message UserActivityResponse {
  string user_id = 1;
  int32 login_count = 2;
  int32 product_views = 3;
  int32 orders_placed = 4;
  double total_spent = 5;
  int32 reviews_written = 6;
}

message RecommendationsRequest {
  string user_id = 1;
  int32 limit = 2;
}

message RecommendationsResponse {
  repeated Recommendation recommendations = 1;
}

message Recommendation {
  string id = 1;
  string name = 2;
  double price = 3;
  string category_id = 4;
}


service UserService {
  rpc GetProfile (Id) returns (ProfileResponse);
  rpc GetRecommendations (RecommendationsRequest) returns (RecommendationsResponse);
  rpc GetUserActivity (UserActivityRequest) returns (UserActivityResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (Void);
  rpc UpdateUserType (UpdateUserTypeRequest) returns (Void);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc DeleteUser (DeleteUserRequest) returns (Void);
}
